--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -1223,13 +1224,14 @@
               <img
                 alt="gallery"
                 class="
+                  gallery-img
                   absolute
                   inset-0
                   w-full
                   h-full
                   object-cover object-center
                 "
-                src="https://dummyimage.com/600x360"
+                src="img/pic1.jpg"
               />
               <div
                 class="
@@ -1277,7 +1279,7 @@
                   h-full
                   object-cover object-center
                 "
-                src="https://dummyimage.com/601x361"
+                src="img/pic2.jpg"
               />
               <div
                 class="
@@ -1325,7 +1327,7 @@
                   h-full
                   object-cover object-center
                 "
-                src="https://dummyimage.com/603x363"
+                src="img/pic3.jpg"
               />
               <div
                 class="
@@ -1373,7 +1375,7 @@
                   h-full
                   object-cover object-center
                 "
-                src="https://dummyimage.com/602x362"
+                src="img/pic4.png"
               />
               <div
                 class="
@@ -1421,7 +1423,7 @@
                   h-full
                   object-cover object-center
                 "
-                src="https://dummyimage.com/605x365"
+                src="img/pic5.jpg"
               />
               <div
                 class="
@@ -1469,7 +1471,7 @@
                   h-full
                   object-cover object-center
                 "
-                src="https://dummyimage.com/606x366"
+                src="img/pic6.jpg"
               />
               <div
                 class="
